// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostList > should render error 1`] = `
<div>
  <div
    class="_error_6d2450"
  >
    Server Error
  </div>
</div>
`;

exports[`PostList > should render loading 1`] = `
<div>
  <div
    class="_loading_6d2450"
  >
    <div
      class="_loader_6d2450"
    />
  </div>
</div>
`;
